--- a/index.html
+++ b/index.html
@@ -4,9 +4,171 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="src/scss/styles.css">
     <title>Homepage</title>
 </head>
 <body>
+    <header>
+        <nav class="navbar shadow navbar-expand-lg bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">Course Assignment</a>
+                <div class="collapse navbar-collapse">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Homepage</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="src/html/profile.html">Profile</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="src/html/login.html">Login</a>
+                        </li>
+                    </ul>
+                </div>
+                <form class="form-inline my-2 my-lg-0">
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                </form>
+                <form class="form-inline my-2 my-lg-0">
+                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                </form>
+            </div>
+        </nav>
+    </header>
     
+    <main>
+        <div class="container-fluid mb-5 text-center">
+            <div>
+                <h1>Feed</h1>
+            </div>
+        </div>
+
+        <div class="feed-container container-fluid">
+            <div class="card-group mb-3 justify-content-center justify-content-around">
+                <div class="card">
+                    <div class="card-body">
+                        <image src="image1.png" class="card-image-top" alt="profile-image1" style="width: 10%;"></image>
+                        <h5 class="card-title">Lorum Ipsum</h5>
+                        <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-body">
+                        <image src="image1.png" class="card-image-top" alt="profile-image1" style="width: 10%;"></image>
+                        <h5 class="card-title">Lorum Ipsum</h5>
+                        <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-body">
+                        <image src="image1.png" class="card-image-top" alt="profile-image1" style="width: 10%;"></image>
+                        <h5 class="card-title">Lorum Ipsum</h5>
+                        <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="card-group mb-3 justify-content-center justify-content-around">
+                <div class="card">
+                    <div class="card-body">
+                        <image src="image1.png" class="card-image-top" alt="profile-image1" style="width: 10%;"></image>
+                        <h5 class="card-title">Lorum Ipsum</h5>
+                        <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-body">
+                        <image src="image1.png" class="card-image-top" alt="profile-image1" style="width: 10%;"></image>
+                        <h5 class="card-title">Lorum Ipsum</h5>
+                        <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-body">
+                        <image src="image1.png" class="card-image-top" alt="profile-image1" style="width: 10%;"></image>
+                        <h5 class="card-title">Lorum Ipsum</h5>
+                        <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                    </div>
+                </div>
+        </div>
+
+        <!--
+        <div class="feed-container container-fluid">
+            <div class="row mb-3 justify-content-center justify-content-around">
+                <div class="col-3">
+                    <div class="card">
+                        <image src="image1.png" class="card-image-top" alt="profile-image1"></image>
+                        <div class="card-body">
+                            <h5 class="card-title">Lorum Ipsum</h5>
+                            <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="card">
+                        <image src="image1.png" class="card-image-top" alt="profile-image1"></image>
+                        <div class="card-body">
+                            <h5 class="card-title">Lorum Ipsum</h5>
+                            <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="card">
+                        <image src="image1.png" class="card-image-top" alt="profile-image1"></image>
+                        <div class="card-body">
+                            <h5 class="card-title">Lorum Ipsum</h5>
+                            <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-center justify-content-around mb-3">
+                <div class="col-3">
+                    <div class="card" style="width: 18rem;">
+                        <image src="image1.png" class="card-image-top" alt="profile-image1"></image>
+                        <div class="card-body">
+                            <h5 class="card-title">Lorum Ipsum</h5>
+                            <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="card" style="width: 18rem;">
+                        <image src="image1.png" class="card-image-top" alt="profile-image1"></image>
+                        <div class="card-body">
+                            <h5 class="card-title">Lorum Ipsum</h5>
+                            <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="card" style="width: 18rem;">
+                        <image src="image1.png" class="card-image-top" alt="profile-image1"></image>
+                        <div class="card-body">
+                            <h5 class="card-title">Lorum Ipsum</h5>
+                            <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        -->
+        <hr class="border border-primary border-1 opacity-25">
+        <div class="form-container container-md mb-3">   
+            <div class="mb-3"">
+                <label for="title" class="form-label">Enter title</label>
+                <input type="text" class="form-control" id="title" placeholder="Enter your title here...">
+            </div>
+            <div class="mb-3">
+                <label for="text" class="form-label">Write post here</label>
+                <textarea class="form-control" id="text" rows="5"></textarea>
+            </div>
+            <button class="btn btn-primary">Post!</button>
+        </div>
+    </main>
+
+    <footer>
+
+    </footer>
 </body>
 </html>
