Final touches to the design

--- a/src/html/profile.html
+++ b/src/html/profile.html
@@ -27,10 +27,10 @@
                     </ul>
                 </div>
                 <form class="form-inline my-2 my-lg-0">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                 </form>
                 <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
                 </form>
             </div>
         </nav>
@@ -62,9 +62,9 @@
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item">Bob</li>
                         <li class="list-group-item">Lorum Ipsum</li>
-                        <li class="list-group-item">Legolas</li>
+                        <li class="list-group-item">Anon *wave.jpg*</li>
                         <li class="list-group-item">Bill Gates</li>
-                        <li class="list-group-item">Booter Strapper</li>
+                        <li class="list-group-item">Booter Straper</li>
                     </ul>
                 </div>
 
@@ -86,8 +86,8 @@
             </div>
 
             <!--Recent Posts-->
-            <div class="col">
-                <h2 class="text-center">Recent Posts</h2>
+            <div class="col px-5 pt-4">
+                <h2 class="text-center">Recent Posts by Ola Nordmann</h2>
                 <hr class="border border-primary border-2 opacity-25">
                 <div class="row mb-3">
                     <div class="col">
@@ -133,7 +133,58 @@
                         </div>
                     </div>
                 </div>
+                <div class="row mb-3">
+                <h2 class="text-center">Recent Contact Posts</h2>
+                <hr class="border border-primary border-2 opacity-25">
+                    <div class="col">
+                        <div class="card">
+                            <div class="card-header">
+                                <h4>Bob</h4>
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">Lorum Ipsum</h5>
+                                <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card">
+                            <div class="card-header">
+                                <h4>Booter Straper</h4>
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">Lorum Ipsum</h5>
+                                <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row mb-3">
+                        <div class="col">
+                            <div class="card">
+                                <div class="card-header">
+                                    <h4>Anon *wave.jpg*</h4>
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title">Lorum Ipsum</h5>
+                                    <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card">
+                                <div class="card-header">
+                                    <h4>Bill Gates</h4>
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title">Lorum Ipsum</h5>
+                                    <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
             </div>
+            
         </div>
     </main>
 
