--- a/src/html/login.html
+++ b/src/html/login.html
@@ -27,10 +27,10 @@
                     </ul>
                 </div>
                 <form class="form-inline my-2 my-lg-0">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                 </form>
                 <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
                 </form>
             </div>
         </nav>
@@ -56,7 +56,7 @@
                         </div>
                     </div>
                     <div class="form-check">
-                        <button type="submit" class="btn btn-primary">Login</button>
+                        <button type="submit" class="btn btn-primary" formaction="/src/html/profile.html" >Login</button>
                     </div>
                 </form>
             </div>
@@ -69,18 +69,3 @@
 
 </body>
 </html>
-
-<!--
-    <div class="card col-sm-4 px-5 pt-5 pb-5 rounded">
-                <div class="form-outline">
-                    <label class="form-label">Login</label>
-                </div>
-                <div class="form-outline mb-4"">
-                    <input type="email" id="email-login" class="form-control" placeholder="Email Address"/>
-                </div>
-                <div class="form-outline mb-4"">
-                    <input type="password" id="password-login" class="form-control" placeholder="Password">
-                </div>
-                <button type="button" class="btn btn-primary btn-block mb-4"">Sign in</button>
-            </div>
--->
