--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Homepage">
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="src/scss/styles.css">
     <title>Homepage</title>
@@ -91,6 +90,69 @@
                     </div>
                 </div>
         </div>
+
+        <!--
+        <div class="feed-container container-fluid">
+            <div class="row mb-3 justify-content-center justify-content-around">
+                <div class="col-3">
+                    <div class="card">
+                        <image src="image1.png" class="card-image-top" alt="profile-image1"></image>
+                        <div class="card-body">
+                            <h5 class="card-title">Lorum Ipsum</h5>
+                            <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="card">
+                        <image src="image1.png" class="card-image-top" alt="profile-image1"></image>
+                        <div class="card-body">
+                            <h5 class="card-title">Lorum Ipsum</h5>
+                            <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="card">
+                        <image src="image1.png" class="card-image-top" alt="profile-image1"></image>
+                        <div class="card-body">
+                            <h5 class="card-title">Lorum Ipsum</h5>
+                            <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-center justify-content-around mb-3">
+                <div class="col-3">
+                    <div class="card" style="width: 18rem;">
+                        <image src="image1.png" class="card-image-top" alt="profile-image1"></image>
+                        <div class="card-body">
+                            <h5 class="card-title">Lorum Ipsum</h5>
+                            <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="card" style="width: 18rem;">
+                        <image src="image1.png" class="card-image-top" alt="profile-image1"></image>
+                        <div class="card-body">
+                            <h5 class="card-title">Lorum Ipsum</h5>
+                            <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="card" style="width: 18rem;">
+                        <image src="image1.png" class="card-image-top" alt="profile-image1"></image>
+                        <div class="card-body">
+                            <h5 class="card-title">Lorum Ipsum</h5>
+                            <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        -->
         <hr class="border border-primary border-1 opacity-25">
         <div class="form-container container-md mb-3">   
             <div class="mb-3"">
